# learn-haskell-by-example

./: README.md  exercises.hs
caesar/: LICENSE  caesar.cabal  package.yaml
caesar/src/: Lib.hs  MyLib.hs
csview/: CHANGELOG.md  LICENSE  csview.cabal
csview/app/: Main.hs
csview/src/: Csv.hs
csview/src/Csv/: Operations.hs  Parsing.hs  Print.hs  Types.hs
csview/src/Data/: Sliceable.hs
csview/src/Utils/: Arguments.hs
ladder/: CHANGELOG.md  ladder.cabal
ladder-fast/: LICENSE  dictionaries  ladder.cabal
ladder-fast/src/: Graph.hs  Ladder.hs  PermutationMap.hs
ladder/app/: Main.hs
ladder/src/: Graph.hs  Ladder.hs  PermutationMap.hs
ladder/src/Data/: AssocMap.hs
lnums/: CHANGELOG.md  Lorem ipsum.txt  lnums.cabal  test.txt
lnums/app/: Main.hs
lnums/src/: MyLib.hs
my-properties/: CHANGELOG.md  my-properties.cabal
my-properties/src/Caesar/: Caesar.hs  QuickCheckProperties.hs  SimpleCheckProperties.hs
my-properties/src/Data/: AssocMap.hs
my-properties/src/Test/: SimpleCheck.hs
my-properties/test/: Spec.hs  SuiteOne.hs  SuiteTwo.hs
synthask/: CHANGELOG.md  synthask.cabal
synthask/app/: Main.hs
synthask/src/Composition/: Note.hs  Notelength.hs  Performance.hs  Pitch.hs
synthask/src/Sound/: Synth.hs
synthask/src/Util/: Types.hs
synthask/test/: Main.hs
