cabal-version:      3.0
name:               caesar
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
category:           Learning
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      multiset
    hs-source-dirs:   src
    default-language: Haskell2010

executable caesar
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        caesar

    hs-source-dirs:   app
    default-language: Haskell2010
