cabal-version:      3.0
name:               csview
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions: OverloadedStrings
                        RecordWildCards
                        NamedFieldPuns
library
    import:           warnings
    exposed-modules:  Csv
                      Csv.Parsing
                      Csv.Types
                      Data.Sliceable
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      text >= 2.1.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable csview
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        csview

    hs-source-dirs:   app
    default-language: Haskell2010
