cabal-version:      3.0
name:               my-properties
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.SimpleCheck
    -- other-modules:
    -- other-extensions:
    build-depends:    
          base ^>=4.18.3.0
        , random >= 1.3.1
    hs-source-dirs:   src
    default-language: Haskell2010
