cabal-version:      3.0
name:               my-properties
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Test.SimpleCheck
        Caesar.Caesar
        Caesar.SimpleCheckProperties
        Caesar.QuickCheckProperties
        Data.AssocMap
    -- other-modules:
    -- other-extensions:
    build-depends:    
          base ^>= 4.18.3.0
        , random >= 1.3.1
        , containers
        , QuickCheck >= 2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite properties-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      SuiteOne
      SuiteTwo
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >= 2.0
    , base ^>= 4.18.3.0
    , my-properties
    , random >= 1.3.1
  default-language: Haskell2010