cabal-version:      3.0
name:               synthask
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Composition.Notelength
                      Composition.Performance
                      Composition.Pitch
                      Sound.Synth
                      Util.Types
    other-modules:
        Paths_synthask
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0,
        HCodecs >= 0.5.2,
        array >= 0.5.4       
    hs-source-dirs:   src
    default-language: Haskell2010

executable synthask
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        HCodecs >= 0.5.2,
        array >= 0.5.4,
        synthask

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite synthask-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Paths_synthask
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        HCodecs,
        QuickCheck >=2.0,
        array,
        synthask
